ci: deploy docs to GitHub Pages with base path fixes

--- a/docs/src/content/docs/ai/index.mdx
+++ b/docs/src/content/docs/ai/index.mdx
@@ -28,11 +28,11 @@ SpectraDB includes an embedded AI runtime that operates in-process alongside the
 
 | Feature | Description | Config Flag |
 |---------|-------------|-------------|
-| [Auto Insights](/ai/insights/) | Pattern synthesis from write streams | `ai_auto_insights` |
-| [Risk Scoring](/ai/risk-scoring/) | Inline anomaly detection per write | `ai_inline_risk_assessment` |
-| [Query Advisor](/ai/query-advisor/) | Access pattern analysis and recommendations | `ai_annotate_reads` |
-| [Compaction Advisor](/ai/compaction-advisor/) | Compaction timing and level optimization | `ai_compaction_advisor` |
-| [Cache Advisor](/ai/cache-advisor/) | Cache sizing and eviction recommendations | `ai_cache_advisor` |
+| [Auto Insights](/SpectraDB/ai/insights/) | Pattern synthesis from write streams | `ai_auto_insights` |
+| [Risk Scoring](/SpectraDB/ai/risk-scoring/) | Inline anomaly detection per write | `ai_inline_risk_assessment` |
+| [Query Advisor](/SpectraDB/ai/query-advisor/) | Access pattern analysis and recommendations | `ai_annotate_reads` |
+| [Compaction Advisor](/SpectraDB/ai/compaction-advisor/) | Compaction timing and level optimization | `ai_compaction_advisor` |
+| [Cache Advisor](/SpectraDB/ai/cache-advisor/) | Cache sizing and eviction recommendations | `ai_cache_advisor` |
 
 ## Enabling AI Features
 
