--- a/docs/src/content/docs/getting-started/installation.mdx
+++ b/docs/src/content/docs/getting-started/installation.mdx
@@ -62,7 +62,7 @@ db.sql("INSERT INTO users VALUES ('u1', 'Alice')")
 results = db.sql("SELECT * FROM users")
 ```
 
-See the [Python integration guide](/integrations/python/) for details.
+See the [Python integration guide](/SpectraDB/integrations/python/) for details.
 
 ## Node.js Bindings
 
@@ -79,7 +79,7 @@ db.sql("INSERT INTO users VALUES ('u1', 'Alice')");
 const results = db.sql("SELECT * FROM users");
 ```
 
-See the [Node.js integration guide](/integrations/nodejs/) for details.
+See the [Node.js integration guide](/SpectraDB/integrations/nodejs/) for details.
 
 ## CLI
 
