--- a/docs/src/content/docs/getting-started/quickstart.mdx
+++ b/docs/src/content/docs/getting-started/quickstart.mdx
@@ -108,7 +108,7 @@ let result = db.sql(
 
 ## Next Steps
 
-- [Configuration](/getting-started/configuration/) — Tune performance, enable AI features
-- [SQL Reference](/sql/) — Full SQL syntax guide
-- [Architecture](/concepts/architecture/) — Understand the internals
-- [Bitemporal Model](/concepts/bitemporal/) — Deep dive into time dimensions
+- [Configuration](/SpectraDB/getting-started/configuration/) — Tune performance, enable AI features
+- [SQL Reference](/SpectraDB/sql/) — Full SQL syntax guide
+- [Architecture](/SpectraDB/concepts/architecture/) — Understand the internals
+- [Bitemporal Model](/SpectraDB/concepts/bitemporal/) — Deep dive into time dimensions
