--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -9,13 +9,13 @@ hero:
   tagline: "Append-only immutable storage with MVCC snapshot reads, SQL query surface, LSM-tree engine, and embedded AI runtime. 276ns reads · 1.9µs writes · 20× faster than SQLite."
   actions:
     - text: Get Started
-      link: /getting-started/quickstart/
+      link: /SpectraDB/getting-started/quickstart/
       icon: right-arrow
     - text: SQL Reference
-      link: /sql/
+      link: /SpectraDB/sql/
       variant: minimal
     - text: Benchmarks
-      link: /performance/benchmarks/
+      link: /SpectraDB/performance/benchmarks/
       variant: minimal
 ---
 
@@ -104,4 +104,4 @@ fn main() -> spectradb::Result<()> {
 }
 ```
 
-[Get started →](/getting-started/quickstart/)
+[Get started →](/SpectraDB/getting-started/quickstart/)
