--- a/docs/src/content/docs/sql/functions/index.mdx
+++ b/docs/src/content/docs/sql/functions/index.mdx
@@ -11,8 +11,8 @@ SpectraDB includes 60+ built-in functions organized by category.
 
 | Category | Functions | Description |
 |----------|-----------|-------------|
-| [String](/sql/functions/string/) | 15+ | Text manipulation and pattern matching |
-| [Numeric](/sql/functions/numeric/) | 10+ | Math operations and rounding |
-| [Date/Time](/sql/functions/datetime/) | 10+ | Timestamp formatting and extraction |
-| [Aggregate](/sql/functions/aggregate/) | 8+ | GROUP BY aggregation functions |
-| [Window](/sql/functions/window/) | 6+ | Window/analytic functions |
+| [String](/SpectraDB/sql/functions/string/) | 15+ | Text manipulation and pattern matching |
+| [Numeric](/SpectraDB/sql/functions/numeric/) | 10+ | Math operations and rounding |
+| [Date/Time](/SpectraDB/sql/functions/datetime/) | 10+ | Timestamp formatting and extraction |
+| [Aggregate](/SpectraDB/sql/functions/aggregate/) | 8+ | GROUP BY aggregation functions |
+| [Window](/SpectraDB/sql/functions/window/) | 6+ | Window/analytic functions |
