ci: switch docs deployment from GitHub Pages to Netlify
GitHub Pages requires a paid plan for private repos. Netlify's free tier
supports private repos with auto-deploy on push.

- Add netlify.toml with build config
- Remove GitHub Actions deploy workflow
- Remove /SpectraDB/ base path from astro config and all MDX links
- Add docs/package-lock.json for reproducible CI builds

--- a/docs/src/content/docs/sql/index.mdx
+++ b/docs/src/content/docs/sql/index.mdx
@@ -32,10 +32,10 @@ SpectraDB provides a full SQL query surface over its append-only ledger storage.
 
 ## Sections
 
-- [DDL](/SpectraDB/sql/ddl/) — CREATE, DROP, ALTER TABLE
-- [DML](/SpectraDB/sql/dml/) — INSERT, UPDATE, DELETE
-- [Queries](/SpectraDB/sql/queries/) — SELECT, JOINs, CTEs, subqueries
-- [Temporal Queries](/SpectraDB/sql/temporal-queries/) — AS OF, VALID AT
-- [Functions](/SpectraDB/sql/functions/) — All built-in functions
-- [EXPLAIN](/SpectraDB/sql/explain/) — Query plan analysis
-- [Prepared Statements](/SpectraDB/sql/prepared-statements/) — Parameterized queries
+- [DDL](/sql/ddl/) — CREATE, DROP, ALTER TABLE
+- [DML](/sql/dml/) — INSERT, UPDATE, DELETE
+- [Queries](/sql/queries/) — SELECT, JOINs, CTEs, subqueries
+- [Temporal Queries](/sql/temporal-queries/) — AS OF, VALID AT
+- [Functions](/sql/functions/) — All built-in functions
+- [EXPLAIN](/sql/explain/) — Query plan analysis
+- [Prepared Statements](/sql/prepared-statements/) — Parameterized queries
