--- a/docs/src/content/docs/reference/api.mdx
+++ b/docs/src/content/docs/reference/api.mdx
@@ -117,4 +117,4 @@ pub enum Value {
 
 ## Config
 
-See [Configuration Reference](/SpectraDB/reference/config/) for all parameters.
+See [Configuration Reference](/reference/config/) for all parameters.
