docs: redesign theme with proper contrast, interactivity, and light mode
Fixes dark-text-on-dark-background contrast issues across all components.

Theme (custom-theme.css):
- Brighten gray-3 (#94a3b8 → #cbd5e1) and gray-4 (#475569 → #94a3b8)
- Add semantic tokens: --spectra-text, --spectra-text-muted, --spectra-text-faint,
  --spectra-dark, --spectra-surface
- Add full light mode support via :root[data-theme='light'] overrides
- Increase card bg opacity from 5% to 7%, border from 10% to 15%
- Stronger table header backgrounds and row hover effects

Components:
- Hero: animated number counters (IntersectionObserver triggers count-up)
- PerformanceChart: scroll-triggered bar width animation (CSS transitions)
- SqlPlayground: build-time SQL syntax highlighting (keywords, strings,
  numbers, comments in distinct colors)
- All 7 components: replace hardcoded colors with CSS custom properties
  for light/dark mode compatibility

Landing page:
- Use custom Hero component with animated stats instead of Starlight's
  default hero

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -5,23 +5,16 @@ title: SpectraDB
 description: The AI-native bitemporal ledger database. 276ns reads. 1.9µs writes. Built in Rust.
 template: splash
 hero:
-  title: The AI-Native Bitemporal Ledger Database
-  tagline: "Append-only immutable storage with MVCC snapshot reads, SQL query surface, LSM-tree engine, and embedded AI runtime. 276ns reads · 1.9µs writes · 20× faster than SQLite."
-  actions:
-    - text: Get Started
-      link: /getting-started/quickstart/
-      icon: right-arrow
-    - text: SQL Reference
-      link: /sql/
-      variant: minimal
-    - text: Benchmarks
-      link: /performance/benchmarks/
-      variant: minimal
+  title: ' '
+  tagline: ' '
 ---
 
+import Hero from '../../components/Hero.astro';
 import FeatureCard from '../../components/FeatureCard.astro';
 import PerformanceChart from '../../components/PerformanceChart.astro';
 import SqlPlayground from '../../components/SqlPlayground.astro';
+
+<Hero />
 
 ## Why SpectraDB?
 
