--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,9 +1,17 @@
 ---
 draft: false
-head: []
-title: Docs
+title: Home
 description: The AI-native bitemporal ledger database. 276ns reads. 1.9µs writes. Built in Rust.
 template: splash
+head:
+  - tag: meta
+    attrs:
+      property: og:title
+      content: SpectraDB — The AI-Native Bitemporal Database
+  - tag: meta
+    attrs:
+      name: twitter:title
+      content: SpectraDB — The AI-Native Bitemporal Database
 ---
 
 import Hero from '../../components/Hero.astro';
