docs: add PolyForm Noncommercial license notice to docs site
Added license section to landing page footer and installation page.

--- a/docs/src/content/docs/getting-started/installation.mdx
+++ b/docs/src/content/docs/getting-started/installation.mdx
@@ -104,6 +104,10 @@ id | value
 k1 | hello
 ```
 
+## License
+
+SpectraDB is licensed under the [PolyForm Noncommercial License 1.0.0](https://github.com/spectra-db/SpectraDB/blob/main/LICENSE). You may use it freely for personal, educational, research, and non-commercial purposes. Commercial use requires a paid license — [contact us](mailto:walebadr@users.noreply.github.com) for details.
+
 ## System Requirements
 
 - **Rust**: 1.75+ (stable)
