--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -92,3 +92,9 @@ cargo add spectradb
 </div>
 
 </section>
+
+<section class="home-section home-license">
+
+**License:** SpectraDB is available under the [PolyForm Noncommercial License 1.0.0](https://github.com/spectra-db/SpectraDB/blob/main/LICENSE). Free for personal, educational, and research use. [Contact us](mailto:walebadr@users.noreply.github.com) for commercial licensing.
+
+</section>
